# IAIA

./: .gitignore  PHM.mlx  README.md  ROS.md
LAB/Bearing Fault Monitoring and RUL Estimation/: LAB_Bearing_RUL_Prognosis_21900031_JinKwak.mlx
LAB/CWRU_Classification/: IAIA_Assignment_CWRU_Classification_21900031_JinKwak.mlx
LAB/PetFeeder/: IAIA_LAB_PetFeederRobot.md  image_display.py  pet_classifier.py  pet_feeder.py
Project/: PHM.mlx  select.mat
Project/Industrial Classification and PHM/: DecisionTree_Classification.ipynb  README.md
Project/PHM/: LSTM_Classification.ipynb  PHM.mlx  PHMpy.ipynb  project_test.m
Project/Robot Automation/: Instruction.md  Program Guideline.md  README.md  Report_RobotAutomation.md  RobotAutomation.md  Troubleshooting.md  [IAIA]Collaborative Robot Project Proposal(241108).pptx  ~$[IAIA] 241210 Final Presentation.pptx
Project/Robot Automation/src/: CMakeLists.txt  README.md  camera.py  chilguys.py  demo_grip.py  demo_move.py  demo_pick_and_place.py  gomoku.py  gomoku_image_capture.py  gomoku_move.py  move_group_python_interface.py  omoks.cpp  pet_classifier.py  pet_feeder.py  user_idx.txt
Project/Robot Automation/src/checker/: checkers.py  mc.py  move_check.py  move_coord.py
Project/Robot Automation/src/gomoku/: gomoku_image_capture.py  gomoku_image_processing.py
Project/Robot Automation/src/msg/: capture_flag.msg
Project/Robot Automation/src/omok/: README.md  dual_network.py  gomoku.py  human_play.py  pv_mcts.py
Tutorial/TU_CaseStudy_Bearing_Vib_Prognosis/: IAIA_CaseStudy_4_PrognosticsUsingVibrationSignalsExample.mlx
Tutorial/TU_FeatureExtraction/: IAIA_EnvelopExtraction_Exercise_student.mlx  IAIA_FFT_Exercise_student.mlx  (+6 more)
(+28 files in other folders)
